--- a/src/ListenTogether/Pages/PlaylistPage.xaml
+++ b/src/ListenTogether/Pages/PlaylistPage.xaml
@@ -6,7 +6,7 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="ListenTogether.Pages.PlaylistPage"
              Title="播放列表"
-             BackgroundColor="#F7F7F7">
+             BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
 
     <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
         <StackLayout Margin="{OnPlatform UWP='0,0,0,20',MacCatalyst='0,0,0,20',Android='0,0,0,10',iOS='0,0,0,10'}"
@@ -30,7 +30,8 @@
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding ClearPlaylistCommand}"/>
                 </StackLayout.GestureRecognizers>
-                <Image Source="remove.png"
+                <Image x:Name="ImgRemove"
+                       Source="{AppThemeBinding Dark='remove_dark.png',Light='remove.png'}"
                        HeightRequest="20"
                        WidthRequest="20">
                 </Image>
@@ -56,7 +57,8 @@
                                 <StackLayout Orientation="Horizontal">
                                     <StackLayout WidthRequest="60"
                                          Orientation="Horizontal">
-                                        <Image Source="heart.png"
+                                        <Image x:Name="ImgHeart"
+                                               Source="{AppThemeBinding Dark='heart_dark.png',Light='heart.png'}"
                                                Aspect="AspectFill"
                                                WidthRequest="15"
                                                HeightRequest="15"
@@ -67,7 +69,7 @@
                                             </Image.GestureRecognizers>
                                         </Image>
 
-                                        <Image Source="remove.png"
+                                        <Image Source="{Binding Source, Source={x:Reference ImgRemove}}"
                                                Margin="15,0,0,0"
                                                Aspect="AspectFill"
                                                WidthRequest="15"
@@ -131,23 +133,23 @@
                                     <StackLayout WidthRequest="60"
                                                  Orientation="Horizontal"
                                                  HorizontalOptions="End">
-                                        <Image Source="heart.png"
-                                       Aspect="AspectFill"
-                                       WidthRequest="15"
-                                       HeightRequest="15"
-                                       VerticalOptions="Center">
+                                        <Image Source="{Binding Source, Source={x:Reference ImgHeart}}"
+                                               Aspect="AspectFill"
+                                               WidthRequest="15"
+                                               HeightRequest="15"
+                                               VerticalOptions="Center">
                                             <Image.GestureRecognizers>
                                                 <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:PlaylistPageViewModel}}, Path=AddToMyFavoriteCommand}"
                                                               CommandParameter="{Binding .}"/>
                                             </Image.GestureRecognizers>
                                         </Image>
 
-                                        <Image Source="remove.png"
-                                       Margin="5,0,0,0"
-                                       Aspect="AspectFill"
-                                       WidthRequest="15"
-                                       HeightRequest="15"
-                                       VerticalOptions="Center">
+                                        <Image Source="{Binding Source, Source={x:Reference ImgRemove}}"
+                                               Margin="5,0,0,0"
+                                               Aspect="AspectFill"
+                                               WidthRequest="15"
+                                               HeightRequest="15"
+                                               VerticalOptions="Center">
                                             <Image.GestureRecognizers>
                                                 <TapGestureRecognizer  Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:PlaylistPageViewModel}}, Path=RemoveOneCommand}"
                                                                CommandParameter="{Binding .}">
