--- a/src/ListenTogether/Pages/LoginPage.xaml
+++ b/src/ListenTogether/Pages/LoginPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ListenTogether.Pages.LoginPage"
              Title="登录"
-             BackgroundColor="#F7F7F7">
+             BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
 
     <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
                  MaximumWidthRequest="{OnPlatform  UWP=500,MacCatalyst=500}">
@@ -33,12 +33,15 @@
             <Button Text="登录"
                     Margin="0,10,0,0"
                     IsEnabled="{Binding IsNotBusy}"
-                    Command="{Binding LoginCommand}"/>
+                    Command="{Binding LoginCommand}"
+                    BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBtnBackground},Light={StaticResource LightBtnBackground}}"
+                    TextColor="{AppThemeBinding Dark={StaticResource DarkBtnText},Light={StaticResource LightBtnText}}"/>
             <Button Text="新用户注册"
                     Margin="0,5,0,0"
                     IsEnabled="{Binding IsNotBusy}"
-                    Command="{Binding GoToRegisterCommand}"/>
-
+                    Command="{Binding GoToRegisterCommand}"
+                    BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBtnBackground},Light={StaticResource LightBtnBackground}}"
+                    TextColor="{AppThemeBinding Dark={StaticResource DarkBtnText},Light={StaticResource LightBtnText}}"/>
         </StackLayout>
     </StackLayout>
 </ContentPage>
