1、修改资源文件为PNG。 2、完成win平台下的高斯模糊

--- a/src/ListenTogether/App.xaml
+++ b/src/ListenTogether/App.xaml
@@ -10,6 +10,7 @@
             <toolkit:IsEqualConverter x:Key="IsEqualConverter" />
             <toolkit:IsNotEqualConverter x:Key="IsNotEqualConverter" />
             <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+            <toolkit:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageSourceConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
